Rec diag scrollbar fix

--- a/scss/shadowRoot/dialog.scss
+++ b/scss/shadowRoot/dialog.scss
@@ -289,7 +289,7 @@
 
 
 #recovery-dialog .session-data {
-	flex: 1;
+	flex: 1 0 0;
 	margin: 0 0 30px;
 	padding: 0 20px 0 30px;
 	overflow-y: scroll;
